--- a/src/app/app.html
+++ b/src/app/app.html
@@ -33,7 +33,7 @@
       <ul class="nav-links">
         <li><a routerLink="/productos" routerLinkActive="active">Productos</a></li>
         <!-- Ejemplo de dropdown si lo necesitas, adaptado a tus estilos -->
-        <!-- <li class="dropdown">
+        <li class="dropdown">
           <a href="#" class="dropbtn">Categorías <i class="arrow-down"></i></a>
           <div class="dropdown-content">
             <a href="#">Colchones</a>
@@ -41,7 +41,7 @@
             <div class="dropdown-divider"></div>
             <a href="#">Accesorios</a>
           </div>
-        </li> -->
+        </li> 
         <li *ngIf="isAdmin"><a routerLink="/upload-excel" routerLinkActive="active">Subir Excel</a></li>
       </ul>
 
