--- a/src/app/components/login/login.html
+++ b/src/app/components/login/login.html
@@ -1,20 +1,23 @@
-<div class="login-container">
-  <h2>Iniciar Sesión</h2>
+<!-- src/app/components/login/login.component.html -->
+<div class="login-wrapper">
+  <div class="login-container">
+    <h2>Iniciar Sesión</h2>
 
-  <form (ngSubmit)="onLogin()">
-    <div class="form-group">
-      <label for="username">Usuario:</label>
-      <input type="text" id="username" [(ngModel)]="username" name="username" required>
+    <form (ngSubmit)="onLogin()">
+      <div class="form-group">
+        <label for="username">Usuario:</label>
+        <input type="text" id="username" [(ngModel)]="username" name="username" required class="form-control">
+      </div>
+      <div class="form-group">
+        <label for="password">Contraseña:</label>
+        <input type="password" id="password" [(ngModel)]="password" name="password" required class="form-control">
+      </div>
+
+      <button type="submit" class="login-button">Entrar</button>
+    </form>
+
+    <div *ngIf="errorMessage" class="error-message">
+      {{ errorMessage }}
     </div>
-    <div class="form-group">
-      <label for="password">Contraseña:</label>
-      <input type="password" id="password" [(ngModel)]="password" name="password" required>
-    </div>
-
-    <button type="submit">Entrar</button>
-  </form>
-
-  <div *ngIf="errorMessage" class="error-message">
-    {{ errorMessage }}
   </div>
 </div>
